# tjawn

./: README.md
src/: jawn.g
src/py/: pyproject.toml
src/py/tests/: test_basics.py  test_text.py  test_tjawn.py
src/py/tjawn/: __init__.py  lark_parser.py  parser.py  serializer.py
